--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Geologica&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geologica&family=Montserrat:wght@400;500;600;700;900&family=Roboto&display=swap');
 
 :root {
   --color-dark-primary: #191919;
@@ -33,12 +34,28 @@ ul {
 body {
   font-size: 2rem;
   color: var(--color-title);
-  font-family: "Roboto", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: var(--color-dark-secondary);
 }
 
+.main {
+  position: relative;
+  display: flex;
+  column-gap: 20px;
+}
+
 .container {
-  max-width: 1265px;
-  padding: 0 30px;
+  max-width: 1305px;
+  padding: 0 15px;
   margin: 0 auto;
+}
+
+.section {
+  padding: 25px;
+  border-radius: 6px;
+  background-color: var(--color-dark-primary);
+}
+
+.button {
+  border: none;
 }
