feat: implement home page with base components

--- a/src/components/ui/Promo/promo.scss
+++ b/src/components/ui/Promo/promo.scss
@@ -48,14 +48,14 @@
   margin-bottom: 45px;
 }
 
-.promo__description-button {
-  color: white;
-  font-size: 1.6rem;
-  font-weight: 600;
-  background-color: var(--color-accent-primary);
-  padding: 10px 30px;
-  border-radius: 6px;
-}
+//.promo__description-button {
+//  color: white;
+//  font-size: 1.6rem;
+//  font-weight: 600;
+//  background-color: var(--color-accent-primary);
+//  padding: 10px 30px;
+//  border-radius: 6px;
+//}
 
 .promo__img {
   position: absolute;
