--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -32,7 +32,7 @@ ul {
 }
 
 body {
-  font-size: 2rem;
+  font-size: 1.4rem;
   color: var(--color-title);
   font-family: 'Montserrat', sans-serif;
   background-color: var(--color-dark-secondary);
@@ -41,7 +41,9 @@ body {
 .main {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   column-gap: 20px;
+  row-gap: 20px;
 }
 
 .container {
@@ -58,4 +60,17 @@ body {
 
 .button {
   border: none;
+  color: white;
+  font-size: 1.6rem;
+  font-weight: 600;
+  background-color: var(--color-accent-primary);
+  padding: 10px 30px;
+  border-radius: 6px;
+  cursor: pointer;
+
+  &:hover {
+    color: var(--color-accent-primary);
+    background-color: white;
+    transition: color, background-color .7s ease-out;
+  }
 }
