--- a/src/components/ui/Promo/promo.scss
+++ b/src/components/ui/Promo/promo.scss
@@ -6,6 +6,9 @@
   column-gap: 20px;
   margin-left: auto;
   width: 950px;
+  @media screen and (max-width: 1300px) {
+    width: 100%;
+  }
 }
 
 .promo__container {
@@ -21,11 +24,22 @@
   color: var(--color-dark-secondary);
   text-shadow: rgba(0, 0, 0, .25) 1px 0 10px;
   margin-bottom: 10px;
+  @media screen and (max-width: 1000px) {
+    font-size: 9rem;
+    line-height: 100px;
+  }
+  @media screen and (max-width: 768px) {
+    font-size: 7rem;
+    line-height: 60px;
+  }
 }
 
 .promo__content {
   display: flex;
   align-items: center;
+  @media screen and (max-width: 768px) {
+    justify-content: center;
+  }
 }
 
 .promo__description {
@@ -43,22 +57,22 @@
 
 .promo__description-title {
   font-size: 4.2rem;
-  font-weight:bold;
+  font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 45px;
+  @media screen and (max-width: 768px) {
+    font-size: 3rem;
+  }
 }
-
-//.promo__description-button {
-//  color: white;
-//  font-size: 1.6rem;
-//  font-weight: 600;
-//  background-color: var(--color-accent-primary);
-//  padding: 10px 30px;
-//  border-radius: 6px;
-//}
 
 .promo__img {
   position: absolute;
   right: 70px;
   bottom: -25px;
+  @media screen and (max-width: 1000px) {
+    width: 350px;
+  }
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
