--- a/src/components/ui/Sale/sale.scss
+++ b/src/components/ui/Sale/sale.scss
@@ -1,14 +1,28 @@
+.sale {
+  width: 100%;
+}
 .sale__container {
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  row-gap: 15px;
+  flex-wrap: wrap;
   padding: 0;
+  @media screen and (max-width: 1300px){
+    justify-content: center;
+  }
 }
 
 .sale__description {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 550px;
+
+  @media screen and (max-width: 768px) {
+    max-width: 320px;
+  }
 }
 
 .sale__title {
@@ -19,6 +33,27 @@
 
   & span {
     font-size: 15rem;
+    @media screen and (max-width: 768px) {
+      font-size: 7rem;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    font-size: 3rem;
+  }
+}
+
+.sale__img img {
+  @media screen and (max-width: 768px) {
+    width: 500px;
+  }
+
+  @media screen and (max-width: 550px) {
+    width: 400px;
+  }
+
+  @media screen and (max-width: 450px) {
+    width: 280px;
   }
 }
 
@@ -26,6 +61,9 @@
   position: absolute;
   left: -20px;
   bottom: 60px;
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
 
@@ -33,5 +71,8 @@
   position: absolute;
   left: 31%;
   bottom: -30px;
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
