--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -56,6 +56,9 @@ body {
   padding: 25px;
   border-radius: 6px;
   background-color: var(--color-dark-primary);
+  @media screen and (max-width: 520px) {
+    padding: 20px 10px;
+  }
 }
 
 .button {
