--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,7 @@
   --color-accent-secondary: #8B57C6;
   --color-text-primary: #576067;
   --color-text-secondary: #616E74;
+  --color-error: red;
 }
 
 html {
