feat: implement cart

--- a/src/components/layouts/Footer/footer.scss
+++ b/src/components/layouts/Footer/footer.scss
@@ -25,7 +25,6 @@
 }
 
 .footer__social-link:hover {
-  transition: color .5s ease-out;
+  transition: color 0.5s ease-out;
   color: var(--color-accent-primary);
 }
-
