--- a/src/components/layouts/Header/header.scss
+++ b/src/components/layouts/Header/header.scss
@@ -12,7 +12,7 @@
     border-radius: 6px;
     background-color: var(--color-dark-primary);
     padding: 4px 10px;
-    @media screen and (max-width: 520px){
+    @media screen and (max-width: 520px) {
       display: none;
     }
   }
@@ -21,7 +21,7 @@
     color: var(--color-title);
     border: none;
     outline: none;
-    &::placeholder{
+    &::placeholder {
       color: var(--color-subtitle);
     }
   }
@@ -38,7 +38,7 @@
     align-items: center;
     column-gap: 5px;
     color: var(--color-subtitle);
-    transition: color .5s;
+    transition: color 0.5s;
 
     &-icon {
       display: flex;
