--- a/src/components/ui/Promo/promo.scss
+++ b/src/components/ui/Promo/promo.scss
@@ -22,7 +22,7 @@
   font-weight: 900;
   line-height: 145px;
   color: var(--color-dark-secondary);
-  text-shadow: rgba(0, 0, 0, .25) 1px 0 10px;
+  text-shadow: rgba(0, 0, 0, 0.25) 1px 0 10px;
   margin-bottom: 10px;
   @media screen and (max-width: 1000px) {
     font-size: 9rem;
