--- a/src/components/ui/ShowButton/ShowButton.module.scss
+++ b/src/components/ui/ShowButton/ShowButton.module.scss
@@ -1,4 +1,4 @@
-.button{
+.button {
   position: absolute;
   top: 50%;
   right: 2%;
@@ -8,6 +8,6 @@
   color: var(--color-accent-primary);
   font-weight: 900;
   cursor: pointer;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   align-self: flex-end;
 }
