--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -3,25 +3,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  row-gap: 20px;
+  flex-grow: 1;
 }
 
-.form {
+.link__wrapper {
   display: flex;
   flex-direction: column;
-  row-gap: 15px;
-  align-items: center;
-}
-
-.password__wrapper {
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
+  align-items: flex-start;
   justify-content: center;
+  row-gap: 15px;
 }
 
-
-
-
-
-
+.link {
+  color: var(--color-accent-primary)
+}
