--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,7 @@
 
 :root {
   --color-dark-primary: #191919;
+  --color-overlay: rgba(0, 0, 0, .9);
   --color-dark-secondary: #212123;
   --color-title: #f6f6f7;
   --color-subtitle: #b8b8b8;
