--- a/src/components/layouts/Header/header.scss
+++ b/src/components/layouts/Header/header.scss
@@ -1,8 +1,13 @@
 .header {
+  position: sticky;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
+  z-index: 11;
+  background-color: var(--color-dark-secondary);
 
   &__form {
     min-width: 300px;
@@ -12,9 +17,6 @@
     border-radius: 6px;
     background-color: var(--color-dark-primary);
     padding: 4px 10px;
-    @media screen and (max-width: 520px) {
-      display: none;
-    }
   }
   &__input {
     background-color: var(--color-dark-primary);
@@ -25,6 +27,39 @@
       color: var(--color-subtitle);
     }
   }
+
+  &__menu {
+    display: flex;
+    width: 60%;
+    align-items: center;
+    justify-content: space-between;
+    &.open {
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      top: 0;
+      left: 0;
+    }
+    @media screen and (max-width: 768px){
+      position: absolute;
+      width: 100%;
+      height: 100vh;
+      top: 0;
+      left: -110%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      row-gap: 20px;
+      align-items: center;
+      background: var(--color-dark-secondary);
+      z-index: 10;
+      transition: all 1s;
+    }
+  }
+}
+
+.logo {
+  z-index: 11;
 }
 
 .nav {
@@ -69,6 +104,18 @@
     &:hover {
       color: var(--color-title);
     }
+  }
+}
+
+.burger {
+  display: none;
+  background: transparent;
+  border: none;
+  color: var(--color-accent-primary);
+  z-index: 11;
+  cursor: pointer;
+  @media screen and (max-width: 768px) {
+    display: block;
   }
 }
 
