--- a/src/components/ui/Promo/Promo.module.scss
+++ b/src/components/ui/Promo/Promo.module.scss
@@ -1,19 +1,38 @@
 .promo {
+  width: 100%;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
   column-gap: 20px;
   margin-left: auto;
-  width: 950px;
   @media screen and (max-width: 1300px) {
     width: 100%;
+  }
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+}
+
+.promo__Links {
+  height: 100%;
+  @media screen and (max-width: 768px) {
+    //width: 100%;
+    //display: flex;
+    //flex-direction: column;
+    //align-items: center;
+    //justify-content: center;
+    display: none;
   }
 }
 
 .promo__container {
   flex-grow: 1;
   padding-top: 0;
+  @media screen and (max-width: 768px) {
+  width: 100%;
+  }
 }
 
 .promo__title {
@@ -24,11 +43,7 @@
   color: var(--color-dark-secondary);
   text-shadow: rgba(0, 0, 0, 0.25) 1px 0 10px;
   margin-bottom: 10px;
-  @media screen and (max-width: 1000px) {
-    font-size: 9rem;
-    line-height: 100px;
-  }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1200px) {
     font-size: 7rem;
     line-height: 60px;
   }
@@ -45,9 +60,14 @@
 .promo__description {
   max-width: 480px;
   margin-bottom: 4px;
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
-.promo__description-subtitle {
+.promo__description__subtitle {
   color: var(--color-text-secondary);
   font-size: 1.6rem;
   font-weight: 500;
@@ -55,13 +75,18 @@
   margin-bottom: 8px;
 }
 
-.promo__description-title {
+.promo__description__title {
   font-size: 4.2rem;
   font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 45px;
+  @media screen and (max-width: 1000px) {
+    width: 85%;
+  }
   @media screen and (max-width: 768px) {
     font-size: 3rem;
+    text-align: center;
+    margin-bottom: 15px;
   }
 }
 
@@ -69,8 +94,9 @@
   position: absolute;
   right: 70px;
   bottom: -25px;
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 1200px) {
     width: 350px;
+    right: 0;
   }
   @media screen and (max-width: 768px) {
     display: none;
