--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -3,5 +3,7 @@
   flex-direction: column;
   align-items: center;
   row-gap: 20px;
-  flex-grow: 1;
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
 }
