--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -63,6 +63,14 @@ body {
   }
 }
 
+.loader__wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .button {
   border: none;
   color: white;
