--- a/src/pages/Auth/Auth.module.scss
+++ b/src/pages/Auth/Auth.module.scss
@@ -1,4 +1,5 @@
 .container {
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,9 +12,51 @@
   color: var(--color-accent-secondary);
   margin-left: 10px;
 }
+
 .form {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
   align-items: center;
+}
+
+.input__container {
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+  text-align: center;
+}
+
+.input__wrapper {
+  position: relative;
+}
+
+.input {
+  width: 300px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  @media screen and (max-width: 768px) {
+    width: 200px;
+  }
+}
+
+.input::placeholder {
+  color: var(--color-accent-secondary) ;
+  font-weight: 700;
+}
+
+.input:focus {
+  outline: 5px solid var(--color-accent-primary);
+}
+
+.input.error {
+  outline: 2px solid var(--color-error);
+}
+
+.input.error:focus {
+  outline: 2px solid var(--color-error);
 }
