--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,6 +54,10 @@ body {
   margin: 0 auto;
 }
 
+.error__message {
+  color: red;
+}
+
 .section {
   padding: 25px;
   border-radius: 6px;
@@ -65,7 +69,7 @@ body {
 
 .loader__wrapper {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,11 +85,14 @@ body {
   border-radius: 6px;
   cursor: pointer;
 
-  &:hover {
+  &:not(:disabled):hover {
     color: var(--color-accent-primary);
     background-color: white;
     transition:
       color,
       background-color 0.7s ease-out;
+  }
+  &:disabled {
+    background-color: var(--color-text-secondary)
   }
 }
