--- a/src/components/layouts/Header/header.scss
+++ b/src/components/layouts/Header/header.scss
@@ -33,12 +33,14 @@
     width: 60%;
     align-items: center;
     justify-content: space-between;
+    will-change: transform;
     &.open {
       position: fixed;
       width: 100%;
       height: 100vh;
       top: 0;
       left: 0;
+      will-change: transform;
     }
     @media screen and (max-width: 768px){
       position: absolute;
@@ -54,6 +56,7 @@
       background: var(--color-dark-secondary);
       z-index: 10;
       transition: all 1s;
+      will-change: transform;
     }
   }
 }
