--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,7 @@
 
 :root {
   --color-dark-primary: #191919;
-  --color-overlay: rgba(0, 0, 0, .9);
+  --color-overlay: rgba(0, 0, 0, 0.9);
   --color-dark-secondary: #212123;
   --color-title: #f6f6f7;
   --color-subtitle: #b8b8b8;
@@ -93,6 +93,6 @@ body {
       background-color 0.7s ease-out;
   }
   &:disabled {
-    background-color: var(--color-text-secondary)
+    background-color: var(--color-text-secondary);
   }
 }
