--- a/src/components/ui/SearchForm/SearchForm.module.scss
+++ b/src/components/ui/SearchForm/SearchForm.module.scss
@@ -1,3 +1,12 @@
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 10px;
+}
+
 .form {
   min-width: 300px;
   align-items: center;
@@ -26,4 +35,20 @@
 
 .input ::placeholder {
   color: var(--color-subtitle);
+}
+
+.products {
+  width: 100%;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  row-gap: 5px;
+  padding: 10px;
+  background-color: var(--color-dark-primary);
+  border-radius: 5px;
+  z-index: 11;
 }
