--- a/src/pages/FilteredProducts/FilteredProducts.module.scss
+++ b/src/pages/FilteredProducts/FilteredProducts.module.scss
@@ -1,14 +1,14 @@
-.container {
-  min-height: 50vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  row-gap: 20px;
-  @media screen and (max-width: 768px) {
-    width: 100%;
-  }
-}
+//.container {
+//  min-height: 50vh;
+//  display: flex;
+//  flex-direction: column;
+//  justify-content: center;
+//  align-items: center;
+//  row-gap: 20px;
+//  @media screen and (max-width: 768px) {
+//    width: 100%;
+//  }
+//}
 
 .link__wrapper {
   display: flex;
