--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -67,6 +67,19 @@ body {
   }
 }
 
+.page__container {
+  min-height: 70vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px;
+  @media screen and (max-width: 768px) {
+    width: 100%;
+  }
+}
+
 .loader__wrapper {
   width: 100%;
   height: 80vh;
